crates/privacy-pools-sdk-core/tests/ui/secret_hash_map_key.stderr
error[E0277]: the trait bound `Secret: std::hash::Hash` is not satisfied
 --> tests/ui/secret_hash_map_key.rs:7:12
  |
7 |     values.insert(Secret::new(U256::from(1_u64)), "secret");
  |            ^^^^^^ the trait `std::hash::Hash` is not implemented for `Secret`
  |
note: required by a bound in `HashMap::<K, V, S>::insert`
 --> $RUST/std/src/collections/hash/map.rs
